[tool.poetry]
name = "django-div-node"
version = "0.1.2"
description = "HTML custom div node in django template"
authors = ["dev <dev@qiyutech.tech>"]
homepage = "https://www.qiyutech.tech/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

django = ">=3.1,<3.2"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
